tests/baselines/reference/generatorTypeCheck57(strict=true).errors.txt
generatorTypeCheck57.ts(3,13): error TS1163: A 'yield' expression is only allowed in a generator body.
generatorTypeCheck57.ts(3,13): error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.


==== generatorTypeCheck57.ts (2 errors) ====
    function* g() {
        class C {
            x = yield 0;
                ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
                ~~~~~
!!! error TS7057: 'yield' expression implicitly results in an 'any' type because its containing generator lacks a return-type annotation.
        };
    }